avoid table to break inside

--- a/livingdocs/040.Media/010.table/scss/pdf.scss
+++ b/livingdocs/040.Media/010.table/scss/pdf.scss
@@ -3,6 +3,10 @@
 
 $table-cells-width-in-mm: false;
 
+.srl-table {
+  break-inside: avoid;
+}
+
 .srl-table__container > div {
   display: flex;
   flex-direction: column;
